Add 404 capability to HttpServer. Updated generated all_content.h to match content

--- a/src/HttpServerContent/index.html
+++ b/src/HttpServerContent/index.html
@@ -55,4 +55,6 @@
     document.querySelector("#navstatus").addEventListener("click",status_clicked );
     document.querySelector("#navconfiguration").addEventListener("click",configuration_clicked );
 </script>
+</html>
+
 
